Fixed Overflow of Navbar.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,3 +188,20 @@ progress[value]::-webkit-progress-value{
     width: 90%;
   }
 }
+@media only screen and (max-width: 500px){
+  .custom-nav{
+    justify-content: space-between !important;
+    font-size: medium;
+  }
+  .custom-nav i{
+    font-size: 80%;
+  }
+  .custom-nav span{
+    font-size: medium;
+    margin: 0px !important;
+  }
+  #custom-title{
+    font-size: 100%;
+    margin: 0px !important;
+  }
+}
